# EPUB-Deluxe-Builder

./: .gitignore  README.md  build.py  cau truc  main.py  requirements.txt
.github/workflows/: ci.yml
core/: builder.py  chapter_parser.py  cleaner.py  cover.py  css.py  manifest.py  metadata.py  pipeline.py  toc.py  utils.py  validator.py
epub_deluxe/: CHANGELOG.md  __init__.py  cli.py  pyproject.toml
features/: chapter.py  cover.py  image_opt.py  kindle.py  theme.py  typography.py
pro/: audiobook.py  epubcheck.py  metadata_ai.py  packaging.py  search_index.py  toc_advanced.py
tests/: test_builder.py  test_epub.py  test_manifest.py  test_metadata.py
